--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
-
+        
+<!-- Form starts here-->
  <form id="task-form">
 <div class ="form-group">
     <input type="text" name="task-name" placeholder="Enter Task Name"/>
@@ -32,7 +33,6 @@
     <div class="form-group">
     <button class="btn" id="save-task" type="submit">Add Task</button>
 </div>
-
 </form>
         
     </header>
