--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 
 </section>
 </main>
+
+<!-- Tasks In Progress -->
+<section class="task-list-wrapper">
+    <h2 class="list-title">Tasks In Progress</h2>
+    <ul class="task-list" id="tasks-in-progress"></ul>
+  </section>
+  
+  <!-- Tasks Completed -->
+  <section class="task-list-wrapper">
+    <h2 class="list-title">Tasks Completed</h2>
+    <ul class="task-list" id="tasks-completed"></ul>
+  </section>
 <!--Footer starts here-->
 <footer>
     &copy;2020 by Taskinator
